--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -2,35 +2,35 @@
  <form action="/api/users" method="POST" id="add_user">
     <div class="new_user">
         <div class="form-group">
-            <label for="name" class="text-light">Name</label>
+            <label for="name" class="text-light">Nome</label>
             <input type="hidden" name="id" value="">
-            <input type="text" name="name" value="" placeholder="Insira seu nome">
+            <input type="text" name="name" value="" required placeholder="Insira seu nome">
         </div>
         <div class="form-group">
             <label for="Email" class="text-light">Email</label>
-            <input type="text" name="email" value="" placeholder="example@email.com">
+            <input type="text" name="email" value="" required placeholder="Insira seu email">
         </div>
         <div class="form-group">
-            <label for="gender" class="text-light">Gender</label>
+            <label for="gender" class="text-light">Sexo</label>
             <div class="radio inline">
-                <input type="radio" id="radio-2" name="gender" value="Male" >
-                <label for="radio-2" class="radio-label">Male</label>
+                <input type="radio" id="radio-2" name="gender" value="Male" checked>
+                <label for="radio-2" class="radio-label">Masculino</label>
             </div>
             <div class="radio inline">
                 <input type="radio" id="radio-3" name="gender" value="Female" >
-                <label for="radio-3" class="radio-label">Female</label>
+                <label for="radio-3" class="radio-label">Feminino</label>
             </div>
         </div>
 
         <div class="form-group">
             <label for="gender" class="text-light">Status</label>
             <div class="radio inline">
-                <input type="radio" id="radio-4" name="status" value="Active" >
-                <label for="radio-4" class="radio-label">Active</label>
+                <input type="radio" id="radio-4" name="status" value="Active" checked >
+                <label for="radio-4" class="radio-label">Ativo</label>
             </div>
             <div class="radio inline">
                 <input type="radio" id="radio-5" name="status" value="Inactive" >
-                <label for="radio-5" class="radio-label">Inactive</label>
+                <label for="radio-5" class="radio-label">Inativo</label>
             </div>
         </div>
 
