--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                         <tr>
                             <th>ID</th>
                             <th>Nome</th>
-                            <th>@Email</th>
+                            <th>Email</th>
                             <th>Sexo</th>
                             <th>Status</th>
                             <th>Atualizar/deletar</th>
