--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -22,11 +22,11 @@
         <div class="form-group">
             <label for="name" class="text-light">Nome</label>
             <input type="hidden" name="id" value="<%= user._id %>">
-            <input type="text" name="name" value="<%= user.name %>" placeholder="Mark Stoenis">
+            <input type="text" name="name" value="<%= user.name %>" required placeholder="Insira seu nome">
         </div>
         <div class="form-group">
             <label for="Email" class="text-light">Email</label>
-            <input type="text" name="email" value="<%= user.email%>" placeholder="example@gmail.com">
+            <input type="text" name="email" value="<%= user.email%>" required placeholder="Insira seu email">
         </div>
         <div class="form-group">
             <label for="gender" class="text-light">Sexo</label>
