--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -13,11 +13,11 @@
         <div class="form-group">
             <label for="gender" class="text-light">Sexo</label>
             <div class="radio inline">
-                <input type="radio" id="radio-2" name="gender" value="Male" checked>
+                <input type="radio" id="radio-2" name="gender" value="Masculino" checked>
                 <label for="radio-2" class="radio-label">Masculino</label>
             </div>
             <div class="radio inline">
-                <input type="radio" id="radio-3" name="gender" value="Female" >
+                <input type="radio" id="radio-3" name="gender" value="Feminino" >
                 <label for="radio-3" class="radio-label">Feminino</label>
             </div>
         </div>
@@ -25,11 +25,11 @@
         <div class="form-group">
             <label for="gender" class="text-light">Status</label>
             <div class="radio inline">
-                <input type="radio" id="radio-4" name="status" value="Active" checked >
+                <input type="radio" id="radio-4" name="status" value="Ativo" checked >
                 <label for="radio-4" class="radio-label">Ativo</label>
             </div>
             <div class="radio inline">
-                <input type="radio" id="radio-5" name="status" value="Inactive" >
+                <input type="radio" id="radio-5" name="status" value="Inativo" >
                 <label for="radio-5" class="radio-label">Inativo</label>
             </div>
         </div>
